public/stylesheets/styles.css
/* 
   TODO customize this sample style
   Syntax recommendation http://www.w3.org/TR/REC-CSS2/
*/

root { 
    display: block;
}

body {
    background-color: #000000;

    margin: 10px;
    padding: 0px;

    font-family: arial;
    font-size: 28px;
    color: #80d1ff;
    width: 1900px;
}

#display1_header {
    height: 100px;
}

#display1_header div {
    float: left;
    line-height: 100px;
    vertical-align: bottom;
}

.text-smaller {
    font-size: 12px;
}

.text-small {
    font-size: 18px;
}

.text-large {
    font-weight: bold;
    font-size: 38px;
}

.text-title {
    font-weight: bold;
    font-size: 38px;
    color: #0072ff;
}

.text-title-dark-blue {
    font-weight: bold;
    font-size: 38px;
    color: #0072ff;
    color: #3344ec;
}

.text-title-yellow {
    font-weight: bold;
    font-size: 38px;
    color: #dddd00;
}

.waterfall {
    border-width: 2px;
    border-color: #0072ff;
    border-style: solid;
    height: 200px;
    width: 768px;
}

.baseline {
    border-width: 2px;
    border-color: #0072ff;
    border-style: solid;
    height: 150px;
    width: 768px;
}

.beam_information {
    width: 250px;
    float: left;
    padding-left: 15px;
}

.beam_description {
    padding-top: 15px;
    padding-left: 15px;
}

.beam_information_center {
    float: left;
}

.beam_information_center div {
    float: left;
    padding-left: 25px;
}

.beam_status {
    color: #faf58b;
    height: 40px;
    margin-top: 10px;
    padding-top: 5px;
    text-align: center;
    background-image: url(/images/icon_off.png);
    background-position: center center;
    background-repeat: no-repeat;
}

.beam_location {
    padding-top: 15px;
    text-align: center;
}

.divider-horizontal {
    margin-top: 25px;
    margin-left: 50px;
    margin-right: 0px;
    margin-bottom: 25px;
    height: 1px;
    background-color: #0072ff;
}

.beam_past_frequency_coverage {
    padding-left: 25px;
}

.beam_frequency {
    color: #faf58b;
    font-size: 18px;
    background-image: url(/images/bg_frequency.png);
    background-position: center;
    background-repeat: no-repeat;
    line-height: 80px;
    height: 80px;
    vertical-align: middle;
    text-align: center;
    padding-left: 25px;
}

.frequency_cover_data_table_container {
    padding-left: 25px;
    float: left;
}

.frequency_cover_data_table {
    padding: 0px;
    margin: 0px;
    background-color: #000000;
}

.frequency_cover_data_table tr {
    height: 15px;
}

.frequency_cover_data_table td {
    border-left: 1px solid #000000;
    width: 15px;
    height: 15px;
}

.frequency_cover_data_table td.off {
    background-color: #FF0000;
    background: -moz-linear-gradient(top, #ff0000, #AA0000);
}

.frequency_cover_data_table td.on {
    background-color: #00FF00;
    background: -moz-linear-gradient(top, #00ff00, #006a00);
}

.frequency_cover_data_table td.current {
    background-color: #dddd00;
    background: -moz-linear-gradient(top, #dddd00, #606000);
}

.frequency_cover_data_table td.arrow {
    height: 15px;
}

.frequency_cover_data_table td.label {
    border-left: 1px solid white; padding-left:5px;
}

.float-wall {
    clear: both;
}

#webcam {
    position: absolute;
    top: 875px;
    left: 995px;
    border: 2px solid white;
    width: 922px;
}

.webcam-image {
    width: 300px;
}

